--- a/index.html
+++ b/index.html
@@ -433,8 +433,8 @@
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Name</label>
-                                <input type="text" class="form-control" placeholder="Name" id="name" required
-                                    data-validation-required-message="Please enter your name." required>
+                                <input type="text" name="name" class="form-control" placeholder="Name" id="name"
+                                    required data-validation-required-message="Please enter your name." required>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
@@ -442,23 +442,25 @@
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Email Address</label>
                                 <input type="email" class="form-control" placeholder="Email Address" id="email" required
-                                    data-validation-required-message="Please enter your email address." required>
+                                    name="email" data-validation-required-message="Please enter your email address."
+                                    required>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Subject</label>
-                                <input type="text" class="form-control" placeholder="Subject" id="subject" required
-                                    data-validation-required-message="Please enter a subject.">
+                                <input type="text" name="subject" class="form-control" placeholder="Subject"
+                                    id="subject" required data-validation-required-message="Please enter a subject.">
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
                         <div class="row control-group">
                             <div class="form-group col-xs-12 floating-label-form-group controls">
                                 <label>Message</label>
-                                <textarea rows="5" class="form-control" placeholder="Message" id="message" required
-                                    data-validation-required-message="Please enter a message." required></textarea>
+                                <textarea rows="5" name="message" class="form-control" placeholder="Message"
+                                    id="message" required data-validation-required-message="Please enter a message."
+                                    required></textarea>
                                 <p class="help-block text-danger"></p>
                             </div>
                         </div>
